video-service/k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-service
  labels:
    app: video-service
spec:
  replicas: ${REPLICAS}
  selector:
    matchLabels:
      app: video-service
  template:
    metadata:
      labels:
        app: video-service
    spec:
      containers:
      - name: video-service
        image: eu.gcr.io/boclips-prod/boclips/video-service:${VERSION}
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            cpu: "1m"
            memory: "100Mi"
          limits:
            cpu: "100m"
            memory: "200Mi"
