video-service/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: video-service
  labels:
    app: video-service
    minikube: "true"
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: video-service
